--- a/packages/frontend/src/app/components/font-size-modal/font-size-modal.component.html
+++ b/packages/frontend/src/app/components/font-size-modal/font-size-modal.component.html
@@ -9,17 +9,19 @@
 <ion-content>
   <ion-list>
     <ion-radio-group [value]="fontSize" (ionChange)="onFontSizeChanged($event)">
-      <ion-item lines="none" *ngFor="let fontSizeOption of fontSizeOptions">
-        <ion-radio
-          labelPlacement="end"
-          justify="start"
-          [value]="fontSizeOption.fontSize"
-        >
-          <span [ngStyle]="{ fontSize: fontSizeOption.fontSize }">
-            {{ fontSizeOption.displayName }}
-          </span>
-        </ion-radio>
-      </ion-item>
+      @for (fontSizeOption of fontSizeOptions; track fontSizeOption) {
+        <ion-item lines="none">
+          <ion-radio
+            labelPlacement="end"
+            justify="start"
+            [value]="fontSizeOption.fontSize"
+          >
+            <span [ngStyle]="{ fontSize: fontSizeOption.fontSize }">
+              {{ fontSizeOption.displayName }}
+            </span>
+          </ion-radio>
+        </ion-item>
+      }
     </ion-radio-group>
   </ion-list>
 </ion-content>
