--- a/packages/frontend/src/app/components/multi-image-upload/multi-image-upload.component.html
+++ b/packages/frontend/src/app/components/multi-image-upload/multi-image-upload.component.html
@@ -9,48 +9,50 @@
   />
 
   <div class="image-carousel">
-    <div class="recipe-image" *ngFor="let image of images; let i = index">
-      <div class="image-frame">
-        <ion-icon
-          name="remove-circle"
-          class="remove-image"
-          (click)="removeImage(image)"
-          color="danger"
-        ></ion-icon>
-        <img src="{{ image.location }}" />
+    @for (image of images; track image; let i = $index) {
+      <div class="recipe-image">
+        <div class="image-frame">
+          <ion-icon
+            name="remove-circle"
+            class="remove-image"
+            (click)="removeImage(image)"
+            color="danger"
+          ></ion-icon>
+          <img src="{{ image.location }}" />
+        </div>
+        @if (images.length > 1) {
+          <div class="image-subtext">
+            <ion-icon
+              name="caret-back"
+              [ngClass]="{ 'hide-reorder': i === 0 }"
+              (click)="reorderImage(image, -1)"
+            ></ion-icon>
+            <span>
+              {{ i + 1 }}
+            </span>
+            <ion-icon
+              name="caret-forward"
+              [ngClass]="{ 'hide-reorder': i >= images.length - 1 }"
+              (click)="reorderImage(image, 1)"
+            ></ion-icon>
+          </div>
+        }
       </div>
-      <div class="image-subtext" *ngIf="images.length > 1">
-        <ion-icon
-          name="caret-back"
-          [ngClass]="{ 'hide-reorder': i === 0 }"
-          (click)="reorderImage(image, -1)"
-        ></ion-icon>
-        <span>
-          {{ i + 1 }}
-        </span>
-        <ion-icon
-          name="caret-forward"
-          [ngClass]="{ 'hide-reorder': i >= images.length - 1 }"
-          (click)="reorderImage(image, 1)"
-        ></ion-icon>
-      </div>
-    </div>
+    }
 
-    <div
-      class="recipe-image"
-      (click)="filePicker()"
-      *ngIf="
-        images.length < 10 &&
-        (images.length === 0 || capabilitiesService.capabilities.multipleImages)
-      "
-    >
-      <div class="image-frame">
-        <span>
-          +
-          <br />
-          {{ "components.multiImageUpload.add" | translate }}
-        </span>
+    @if (
+      images.length < 10 &&
+      (images.length === 0 || capabilitiesService.capabilities.multipleImages)
+    ) {
+      <div class="recipe-image" (click)="filePicker()">
+        <div class="image-frame">
+          <span>
+            +
+            <br />
+            {{ "components.multiImageUpload.add" | translate }}
+          </span>
+        </div>
       </div>
-    </div>
+    }
   </div>
 </div>
