--- a/packages/frontend/src/app/components/select-ingredients/select-ingredients.component.html
+++ b/packages/frontend/src/app/components/select-ingredients/select-ingredients.component.html
@@ -1,41 +1,46 @@
 <div>
-  <div *ngIf="scaledIngredients && scaledIngredients.length > 0">
-    <p>
-      {{ "components.selectIngredients.title" | translate }}
-    </p>
-
-    <ion-item>
-      <ion-checkbox
-        labelPlacement="end"
-        justify="start"
-        [(ngModel)]="allSelected"
-        (ngModelChange)="resetAll()"
-        checked="true"
-      >
-        {{ "components.selectIngredients.toggleAll" | translate }}
-      </ion-checkbox>
-    </ion-item>
-    <ion-item *ngFor="let ingredient of scaledIngredients; let i = index">
-      <ion-checkbox
-        labelPlacement="end"
-        justify="start"
-        [(ngModel)]="ingredientBinders[i]"
-        (ngModelChange)="toggleIngredient(i)"
-        checked="true"
-      >
-        {{ ingredient.content }}
-      </ion-checkbox>
-    </ion-item>
-    <br />
-    <a class="scale" (click)="changeScale()">
-      {{ "components.selectIngredients.scale" | translate: { scale: scale } }}
-    </a>
-  </div>
-  <div *ngIf="!scaledIngredients || scaledIngredients.length === 0">
-    <p>
-      <b>
-        {{ "components.selectIngredients.null" | translate }}
-      </b>
-    </p>
-  </div>
+  @if (scaledIngredients && scaledIngredients.length > 0) {
+    <div>
+      <p>
+        {{ "components.selectIngredients.title" | translate }}
+      </p>
+      <ion-item>
+        <ion-checkbox
+          labelPlacement="end"
+          justify="start"
+          [(ngModel)]="allSelected"
+          (ngModelChange)="resetAll()"
+          checked="true"
+        >
+          {{ "components.selectIngredients.toggleAll" | translate }}
+        </ion-checkbox>
+      </ion-item>
+      @for (ingredient of scaledIngredients; track ingredient; let i = $index) {
+        <ion-item>
+          <ion-checkbox
+            labelPlacement="end"
+            justify="start"
+            [(ngModel)]="ingredientBinders[i]"
+            (ngModelChange)="toggleIngredient(i)"
+            checked="true"
+          >
+            {{ ingredient.content }}
+          </ion-checkbox>
+        </ion-item>
+      }
+      <br />
+      <a class="scale" (click)="changeScale()">
+        {{ "components.selectIngredients.scale" | translate: { scale: scale } }}
+      </a>
+    </div>
+  }
+  @if (!scaledIngredients || scaledIngredients.length === 0) {
+    <div>
+      <p>
+        <b>
+          {{ "components.selectIngredients.null" | translate }}
+        </b>
+      </p>
+    </div>
+  }
 </div>
