--- a/packages/frontend/src/app/components/shopping-list-item/shopping-list-item.component.html
+++ b/packages/frontend/src/app/components/shopping-list-item/shopping-list-item.component.html
@@ -7,39 +7,47 @@
   >
     <div class="ion-checkbox-label ion-text-wrap">
       {{ title }}
-      <p *ngIf="recipeTitle">
-        {{ "components.shoppingListItem.recipe" | translate }}
-        <span>{{ recipeTitle }}</span>
-      </p>
-      <p *ngIf="createdAt">
-        {{ "components.shoppingListItem.added" | translate }}
-        <span>{{ formatItemCreationDate(createdAt) }}</span>
-      </p>
-      <p *ngIf="ownerName">
-        {{ "components.shoppingListItem.addedBy" | translate }}
-        <span>{{ ownerName }}</span>
-      </p>
+      @if (recipeTitle) {
+        <p>
+          {{ "components.shoppingListItem.recipe" | translate }}
+          <span>{{ recipeTitle }}</span>
+        </p>
+      }
+      @if (createdAt) {
+        <p>
+          {{ "components.shoppingListItem.added" | translate }}
+          <span>{{ formatItemCreationDate(createdAt) }}</span>
+        </p>
+      }
+      @if (ownerName) {
+        <p>
+          {{ "components.shoppingListItem.addedBy" | translate }}
+          <span>{{ ownerName }}</span>
+        </p>
+      }
     </div>
   </ion-checkbox>
-  <ion-button
-    *ngIf="showDeleteButton"
-    slot="end"
-    style="icon-only"
-    fill="clear"
-    color="danger"
-    (click)="deleteClick.emit()"
-  >
-    <ion-icon slot="icon-only" icon="trash"></ion-icon>
-  </ion-button>
-  <ion-button
-    *ngIf="!hideRecategorizeButton"
-    slot="end"
-    style="icon-only"
-    fill="clear"
-    (click)="showMoveToPopover($event)"
-  >
-    <ion-icon slot="icon-only" icon="ellipsis-vertical"></ion-icon>
-  </ion-button>
+  @if (showDeleteButton) {
+    <ion-button
+      slot="end"
+      style="icon-only"
+      fill="clear"
+      color="danger"
+      (click)="deleteClick.emit()"
+    >
+      <ion-icon slot="icon-only" icon="trash"></ion-icon>
+    </ion-button>
+  }
+  @if (!hideRecategorizeButton) {
+    <ion-button
+      slot="end"
+      style="icon-only"
+      fill="clear"
+      (click)="showMoveToPopover($event)"
+    >
+      <ion-icon slot="icon-only" icon="ellipsis-vertical"></ion-icon>
+    </ion-button>
+  }
   <ion-popover
     #moveToPopover
     [isOpen]="moveToPopoverIsOpen"
@@ -51,30 +59,32 @@
           <ion-list-header>
             {{ "components.shoppingListItem.moveTo" | translate }}
           </ion-list-header>
-          <ion-item
-            *ngFor="let i18n of builtinCategories"
-            fill="clear"
-            (click)="moveToPopoverIsOpen = false; moveToCategoryI18n(i18n)"
-            button
-            detail="true"
-          >
-            <ion-label>
-              {{ i18n | translate }}
-            </ion-label>
-          </ion-item>
-          <ion-item
-            *ngFor="let userCatTitle of userKnownCategories"
-            fill="clear"
-            (click)="
-              moveToPopoverIsOpen = false; moveToCategoryCustom(userCatTitle)
-            "
-            button
-            detail="true"
-          >
-            <ion-label>
-              {{ userCatTitle }}
-            </ion-label>
-          </ion-item>
+          @for (i18n of builtinCategories; track i18n) {
+            <ion-item
+              fill="clear"
+              (click)="moveToPopoverIsOpen = false; moveToCategoryI18n(i18n)"
+              button
+              detail="true"
+            >
+              <ion-label>
+                {{ i18n | translate }}
+              </ion-label>
+            </ion-item>
+          }
+          @for (userCatTitle of userKnownCategories; track userCatTitle) {
+            <ion-item
+              fill="clear"
+              (click)="
+                moveToPopoverIsOpen = false; moveToCategoryCustom(userCatTitle)
+              "
+              button
+              detail="true"
+            >
+              <ion-label>
+                {{ userCatTitle }}
+              </ion-label>
+            </ion-item>
+          }
           <ion-item
             fill="clear"
             (click)="moveToPopoverIsOpen = false; showMoveToArbitraryInput()"
