--- a/packages/frontend/src/app/pages/messaging-components/new-message-modal/new-message-modal.page.html
+++ b/packages/frontend/src/app/pages/messaging-components/new-message-modal/new-message-modal.page.html
@@ -15,11 +15,13 @@
     (selectedUserChange)="onSelectedUserChange($event)"
     [selectedUser]="recipientInfo"
   ></select-user>
-  <ion-item *ngIf="!recipientId">
+  @if (!recipientId) {
+  <ion-item>
     <ion-label>
       <p>{{ 'pages.newMessageModal.input.target' | translate }}</p>
     </ion-label>
   </ion-item>
+  }
 
   <br /><br />
 
