--- a/packages/frontend/src/app/pages/settings-components/account/account.page.html
+++ b/packages/frontend/src/app/pages/settings-components/account/account.page.html
@@ -8,24 +8,21 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content *ngIf="me && myStats">
+@if (me && myStats) {
+<ion-content>
   <br />
-
   <ion-item lines="none">
     <ion-label class="ion-text-wrap">
       <p>{{ 'pages.account.description' | translate }}</p>
     </ion-label>
   </ion-item>
-
   <br />
-
   <ion-item lines="none">
     <ion-icon name="key" slot="start"></ion-icon>
     <ion-label class="ion-text-wrap"
       >{{ 'pages.account.creds.title' | translate }}</ion-label
     >
   </ion-item>
-
   <ion-item>
     <ion-input
       label="{{ 'pages.account.creds.name' | translate }}"
@@ -37,16 +34,12 @@
       (ionFocus)="nameChanged = true"
       (ngModelChange)="nameChanged = true"
     ></ion-input>
-    <ion-button
-      *ngIf="nameChanged"
-      (click)="saveName()"
-      slot="end"
-      class="ion-align-self-center"
-    >
+    @if (nameChanged) {
+    <ion-button (click)="saveName()" slot="end" class="ion-align-self-center">
       {{ 'pages.account.creds.name.save' | translate }}
     </ion-button>
+    }
   </ion-item>
-
   <ion-item>
     <ion-input
       label="{{ 'pages.account.creds.email' | translate }}"
@@ -58,16 +51,12 @@
       (ionFocus)="emailChanged = true"
       (ngModelChange)="emailChanged = true"
     ></ion-input>
-    <ion-button
-      *ngIf="emailChanged"
-      (click)="saveEmail()"
-      slot="end"
-      class="ion-align-self-center"
-    >
+    @if (emailChanged) {
+    <ion-button (click)="saveEmail()" slot="end" class="ion-align-self-center">
       {{ 'pages.account.creds.email.save' | translate }}
     </ion-button>
+    }
   </ion-item>
-
   <ion-item>
     <ion-input
       label="{{ 'pages.account.creds.password' | translate }}"
@@ -80,8 +69,8 @@
       (ngModelChange)="passwordChanged = true;"
     ></ion-input>
   </ion-item>
-
-  <ion-item *ngIf="passwordChanged">
+  @if (passwordChanged) {
+  <ion-item>
     <ion-input
       label="{{ 'pages.account.creds.password.confirm' | translate }}"
       labelPlacement="stacked"
@@ -98,68 +87,57 @@
       {{ 'pages.account.creds.password.save' | translate }}
     </ion-button>
   </ion-item>
-
+  }
   <br />
-
   <ion-item lines="none">
     <ion-label class="ion-text-wrap">
       <p>{{ 'pages.account.creds.instructions' | translate }}</p>
     </ion-label>
   </ion-item>
-
   <br /><br />
-
   <ion-item lines="none">
     <ion-icon name="stats-chart" slot="start"></ion-icon>
     <ion-label class="ion-text-wrap"
       >{{ 'pages.account.stats.title' | translate }}</ion-label
     >
   </ion-item>
-
   <ion-item lines="none" class="ion-text-wrap">
     <ion-label>
       <h2>{{ 'pages.account.stats.recipeCount' | translate }}</h2>
       <p>{{myStats.recipeCount}}</p>
     </ion-label>
   </ion-item>
-
   <ion-item lines="none" class="ion-text-wrap">
     <ion-label>
       <h2>{{ 'pages.account.stats.recipeImageCount' | translate }}</h2>
       <p>{{myStats.recipeImageCount}}</p>
     </ion-label>
   </ion-item>
-
   <ion-item lines="none" class="ion-text-wrap">
     <ion-label>
       <h2>{{ 'pages.account.stats.messageCount' | translate }}</h2>
       <p>{{myStats.messageCount}}</p>
     </ion-label>
   </ion-item>
-
   <ion-item lines="none" class="ion-text-wrap">
     <ion-label>
       <h2>{{ 'pages.account.stats.createdAt' | translate }}</h2>
       <p>{{formatDate(myStats.createdAt)}}</p>
     </ion-label>
   </ion-item>
-
   <ion-item lines="none" class="ion-text-wrap">
     <ion-label>
       <h2>{{ 'pages.account.stats.lastLogin' | translate }}</h2>
       <p>{{formatDate(myStats.lastLogin || myStats.createdAt)}}</p>
     </ion-label>
   </ion-item>
-
   <br /><br />
-
   <ion-item lines="none">
     <ion-icon name="heart" slot="start"></ion-icon>
     <ion-label class="ion-text-wrap"
       >{{ 'pages.account.bonus.title' | translate }}</ion-label
     >
   </ion-item>
-
   <ion-item lines="none">
     <ion-label class="ion-text-wrap">
       <p>
@@ -169,122 +147,114 @@
       </p>
     </ion-label>
   </ion-item>
-
   <ion-item lines="none" class="ion-text-wrap">
     <ion-label class="ion-text-wrap">
       <h2>{{ 'pages.account.bonus.highResImages' | translate }}</h2>
-      <p *ngIf="capabilitySubscriptions['highResImages']?.enabled">
-        {{ 'pages.account.bonus.enabled' | translate }}
-      </p>
-      <p *ngIf="!capabilitySubscriptions['highResImages']?.enabled">
-        {{ 'pages.account.bonus.notEnabled' | translate }}
-      </p>
-      <p *ngIf="capabilitySubscriptions['highResImages']">
-        <span
-          *ngIf="capabilitySubscriptions['highResImages'].expires && capabilitySubscriptions['highResImages'].expired"
-        >
+      @if (capabilitySubscriptions['highResImages']?.enabled) {
+      <p>{{ 'pages.account.bonus.enabled' | translate }}</p>
+      } @if (!capabilitySubscriptions['highResImages']?.enabled) {
+      <p>{{ 'pages.account.bonus.notEnabled' | translate }}</p>
+      } @if (capabilitySubscriptions['highResImages']) {
+      <p>
+        @if (capabilitySubscriptions['highResImages'].expires &&
+        capabilitySubscriptions['highResImages'].expired) {
+        <span>
           {{ 'pages.account.bonus.subscriptionExpired' | translate:{date:
           capabilitySubscriptions['highResImages'].expires} }}
         </span>
-        <span
-          *ngIf="capabilitySubscriptions['highResImages'].expires && !capabilitySubscriptions['highResImages'].expired"
-        >
+        } @if (capabilitySubscriptions['highResImages'].expires &&
+        !capabilitySubscriptions['highResImages'].expired) {
+        <span>
           {{ 'pages.account.bonus.subscriptionExpires' | translate:{date:
           capabilitySubscriptions['highResImages'].expires} }}
         </span>
-        <span *ngIf="!capabilitySubscriptions['highResImages'].expires">
+        } @if (!capabilitySubscriptions['highResImages'].expires) {
+        <span>
           {{ 'pages.account.bonus.subscriptionNeverExpires' | translate }}
         </span>
-        <span
-          *ngIf="capabilitySubscriptions['highResImages'].expires && capabilitySubscriptions['highResImages'].enabled"
-        >
-          {{ 'pages.account.bonus.automaticRenewal' | translate }}
-        </span>
+        } @if (capabilitySubscriptions['highResImages'].expires &&
+        capabilitySubscriptions['highResImages'].enabled) {
+        <span> {{ 'pages.account.bonus.automaticRenewal' | translate }} </span>
+        }
       </p>
+      }
     </ion-label>
   </ion-item>
-
   <ion-item lines="none" class="ion-text-wrap">
     <ion-label class="ion-text-wrap">
       <h2>{{ 'pages.account.bonus.multipleImages' | translate }}</h2>
-      <p *ngIf="capabilitySubscriptions['multipleImages']?.enabled">
-        {{ 'pages.account.bonus.enabled' | translate }}
-      </p>
-      <p *ngIf="!capabilitySubscriptions['multipleImages']?.enabled">
-        {{ 'pages.account.bonus.notEnabled' | translate }}
-      </p>
-      <p
-        *ngIf="capabilitySubscriptions['multipleImages'] && capabilitySubscriptions['multipleImages'].expired !== null"
-      >
-        <span
-          *ngIf="capabilitySubscriptions['multipleImages'].expires && capabilitySubscriptions['multipleImages'].expired"
-        >
+      @if (capabilitySubscriptions['multipleImages']?.enabled) {
+      <p>{{ 'pages.account.bonus.enabled' | translate }}</p>
+      } @if (!capabilitySubscriptions['multipleImages']?.enabled) {
+      <p>{{ 'pages.account.bonus.notEnabled' | translate }}</p>
+      } @if (capabilitySubscriptions['multipleImages'] &&
+      capabilitySubscriptions['multipleImages'].expired !== null) {
+      <p>
+        @if (capabilitySubscriptions['multipleImages'].expires &&
+        capabilitySubscriptions['multipleImages'].expired) {
+        <span>
           {{ 'pages.account.bonus.subscriptionExpired' | translate:{date:
           capabilitySubscriptions['multipleImages'].expires} }}
         </span>
-        <span
-          *ngIf="capabilitySubscriptions['multipleImages'].expires && !capabilitySubscriptions['multipleImages'].expired"
-        >
+        } @if (capabilitySubscriptions['multipleImages'].expires &&
+        !capabilitySubscriptions['multipleImages'].expired) {
+        <span>
           {{ 'pages.account.bonus.subscriptionExpires' | translate:{date:
           capabilitySubscriptions['multipleImages'].expires} }}
         </span>
-        <span *ngIf="!capabilitySubscriptions['multipleImages'].expires">
+        } @if (!capabilitySubscriptions['multipleImages'].expires) {
+        <span>
           {{ 'pages.account.bonus.subscriptionNeverExpires' | translate }}
         </span>
-        <span
-          *ngIf="capabilitySubscriptions['multipleImages'].expires && capabilitySubscriptions['multipleImages'].enabled"
-        >
-          {{ 'pages.account.bonus.automaticRenewal' | translate }}
-        </span>
+        } @if (capabilitySubscriptions['multipleImages'].expires &&
+        capabilitySubscriptions['multipleImages'].enabled) {
+        <span> {{ 'pages.account.bonus.automaticRenewal' | translate }} </span>
+        }
       </p>
+      }
     </ion-label>
   </ion-item>
-
   <ion-item lines="none" class="ion-text-wrap">
     <ion-label class="ion-text-wrap">
       <h2>{{ 'pages.account.bonus.assistantMoreMessages' | translate }}</h2>
-      <p *ngIf="capabilitySubscriptions['assistantMoreMessages']?.enabled">
-        {{ 'pages.account.bonus.enabled' | translate }}
-      </p>
-      <p *ngIf="!capabilitySubscriptions['assistantMoreMessages']?.enabled">
-        {{ 'pages.account.bonus.notEnabled' | translate }}
-      </p>
-      <p
-        *ngIf="capabilitySubscriptions['assistantMoreMessages'] && capabilitySubscriptions['assistantMoreMessages'].expired !== null"
-      >
-        <span
-          *ngIf="capabilitySubscriptions['assistantMoreMessages'].expires && capabilitySubscriptions['assistantMoreMessages'].expired"
-        >
+      @if (capabilitySubscriptions['assistantMoreMessages']?.enabled) {
+      <p>{{ 'pages.account.bonus.enabled' | translate }}</p>
+      } @if (!capabilitySubscriptions['assistantMoreMessages']?.enabled) {
+      <p>{{ 'pages.account.bonus.notEnabled' | translate }}</p>
+      } @if (capabilitySubscriptions['assistantMoreMessages'] &&
+      capabilitySubscriptions['assistantMoreMessages'].expired !== null) {
+      <p>
+        @if (capabilitySubscriptions['assistantMoreMessages'].expires &&
+        capabilitySubscriptions['assistantMoreMessages'].expired) {
+        <span>
           {{ 'pages.account.bonus.subscriptionExpired' | translate:{date:
           capabilitySubscriptions['assistantMoreMessages'].expires} }}
         </span>
-        <span
-          *ngIf="capabilitySubscriptions['assistantMoreMessages'].expires && !capabilitySubscriptions['assistantMoreMessages'].expired"
-        >
+        } @if (capabilitySubscriptions['assistantMoreMessages'].expires &&
+        !capabilitySubscriptions['assistantMoreMessages'].expired) {
+        <span>
           {{ 'pages.account.bonus.subscriptionExpires' | translate:{date:
           capabilitySubscriptions['assistantMoreMessages'].expires} }}
         </span>
-        <span *ngIf="!capabilitySubscriptions['assistantMoreMessages'].expires">
+        } @if (!capabilitySubscriptions['assistantMoreMessages'].expires) {
+        <span>
           {{ 'pages.account.bonus.subscriptionNeverExpires' | translate }}
         </span>
-        <span
-          *ngIf="capabilitySubscriptions['assistantMoreMessages'].expires && capabilitySubscriptions['multipleImages'].enabled"
-        >
-          {{ 'pages.account.bonus.automaticRenewal' | translate }}
-        </span>
+        } @if (capabilitySubscriptions['assistantMoreMessages'].expires &&
+        capabilitySubscriptions['multipleImages'].enabled) {
+        <span> {{ 'pages.account.bonus.automaticRenewal' | translate }} </span>
+        }
       </p>
+      }
     </ion-label>
   </ion-item>
-
   <br /><br />
-
   <ion-item lines="none">
     <ion-icon name="warning" color="danger" slot="start"></ion-icon>
     <ion-label class="ion-text-wrap">
       {{ 'pages.account.dangerZone.title' | translate }}
     </ion-label>
   </ion-item>
-
   <ion-item lines="none">
     <ion-label class="ion-text-wrap">
       <p>
@@ -293,7 +263,6 @@
       </p>
     </ion-label>
   </ion-item>
-
   <ion-button
     color="danger"
     (click)="deleteAllRecipes()"
@@ -301,9 +270,7 @@
   >
     {{ 'pages.account.dangerZone.deleteAllRecipes' | translate }}
   </ion-button>
-
   <br />
-
   <ion-button
     color="danger"
     (click)="deleteAccount()"
@@ -311,10 +278,10 @@
   >
     {{ 'pages.account.dangerZone.deleteAccount' | translate }}
   </ion-button>
-
   <ion-item lines="none">
     <ion-label class="ion-text-wrap">
       <p>{{ 'pages.account.dangerZone.description' | translate }}</p>
     </ion-label>
   </ion-item>
 </ion-content>
+}
