--- a/packages/frontend/src/app/pages/settings-components/export/export.page.html
+++ b/packages/frontend/src/app/pages/settings-components/export/export.page.html
@@ -9,14 +9,16 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <div *ngIf="exportJobs.length">
+  @if (exportJobs.length) {
+  <div>
     <ion-item lines="none">
       <ion-label class="ion-text-wrap">
         {{ 'pages.export.jobs' | translate }}
         <p>{{ 'pages.export.jobs.subtitle' | translate }}<br /></p>
       </ion-label>
     </ion-item>
-    <div *ngFor="let exportJob of exportJobs.slice(0, showJobs)">
+    @for (exportJob of exportJobs.slice(0, showJobs); track exportJob) {
+    <div>
       <ion-item
         (click)="downloadJob(exportJob)"
         target="_blank"
@@ -33,36 +35,43 @@
               timestamp:formatItemCreationDate(exportJob.createdAt) } }}
             </span>
             <br />
-            <span *ngIf="exportJob.status === 'CREATE'" class="job-create">
+            @if (exportJob.status === 'CREATE') {
+            <span class="job-create">
               {{ 'pages.export.status.create' | translate }}
             </span>
-            <span *ngIf="exportJob.status === 'RUN'" class="job-run">
+            } @if (exportJob.status === 'RUN') {
+            <span class="job-run">
               {{ 'pages.export.status.run' | translate }}
             </span>
-            <span *ngIf="exportJob.status === 'FAIL'" class="job-fail">
+            } @if (exportJob.status === 'FAIL') {
+            <span class="job-fail">
               {{ 'pages.export.status.fail' | translate }} {{
               getJobFailureI18n(exportJob) | translate }}
             </span>
-            <span *ngIf="exportJob.status === 'SUCCESS'" class="job-success">
+            } @if (exportJob.status === 'SUCCESS') {
+            <span class="job-success">
               {{ 'pages.export.status.success' | translate }}
             </span>
+            } @if (exportJob.status === 'RUN') {
             <ion-progress-bar
-              *ngIf="exportJob.status === 'RUN'"
               type="determinate"
               [value]="(getRunningJob()?.progress || 0) * 0.01"
             ></ion-progress-bar>
+            }
           </p>
         </ion-label>
       </ion-item>
     </div>
-    <ion-item *ngIf="exportJobs.length > showJobs" lines="none">
+    } @if (exportJobs.length > showJobs) {
+    <ion-item lines="none">
       <ion-button (click)="showMoreJobs()" fill="clear">
         {{ 'generic.showMore' | translate }}
       </ion-button>
     </ion-item>
+    }
   </div>
-
-  <div *ngIf="!getRunningJob()">
+  } @if (!getRunningJob()) {
+  <div>
     <ion-item lines="none">
       <ion-label class="ion-text-wrap">
         <br />
@@ -74,7 +83,6 @@
         </p>
       </ion-label>
     </ion-item>
-
     <ion-list>
       <ion-item (click)="exportAsJSONLD()" detail button>
         <ion-icon name="cloud-download" slot="start"></ion-icon>
@@ -90,4 +98,5 @@
       </ion-item>
     </ion-list>
   </div>
+  }
 </ion-content>
