--- a/packages/frontend/src/app/components/shopping-list-group/shopping-list-group.component.html
+++ b/packages/frontend/src/app/components/shopping-list-group/shopping-list-group.component.html
@@ -1,68 +1,69 @@
-<shopping-list-item
-  *ngIf="group.items.length === 1"
-  [id]="group.items[0].id"
-  [title]="group.items[0].title"
-  [completed]="group.items[0].completed"
-  [recipeTitle]="showRecipeTitle && group.items[0].recipe?.title"
-  [createdAt]="showAddedOn && group.items[0].createdAt"
-  [ownerName]="showAddedBy && group.items[0].owner?.name"
-  (completeToggle)="completeToggle.emit(group.items)"
-  (recategorize)="recategorize.emit([group.items, $event])"
-></shopping-list-item>
-<div *ngIf="group.items.length > 1">
-  <ion-grid class="ion-no-padding">
-    <ion-row class="ion-align-items-center">
-      <ion-col class="ion-no-padding">
-        <ion-item class="groupedItem">
-          <ion-checkbox
-            labelPlacement="end"
-            justify="start"
-            [(ngModel)]="group.items[0].completed"
-            (ngModelChange)="completeToggle.emit(group.items)"
+@if (group.items.length === 1) {
+  <shopping-list-item
+    [id]="group.items[0].id"
+    [title]="group.items[0].title"
+    [completed]="group.items[0].completed"
+    [recipeTitle]="showRecipeTitle && group.items[0].recipe?.title"
+    [createdAt]="showAddedOn && group.items[0].createdAt"
+    [ownerName]="showAddedBy && group.items[0].owner?.name"
+    (completeToggle)="completeToggle.emit(group.items)"
+    (recategorize)="recategorize.emit([group.items, $event])"
+  ></shopping-list-item>
+}
+@if (group.items.length > 1) {
+  <div>
+    <ion-grid class="ion-no-padding">
+      <ion-row class="ion-align-items-center">
+        <ion-col class="ion-no-padding">
+          <ion-item class="groupedItem">
+            <ion-checkbox
+              labelPlacement="end"
+              justify="start"
+              [(ngModel)]="group.items[0].completed"
+              (ngModelChange)="completeToggle.emit(group.items)"
+            >
+              <div class="ion-text-wrap">
+                {{ group.title }}
+              </div>
+            </ion-checkbox>
+          </ion-item>
+        </ion-col>
+        <ion-col size="auto">
+          <ion-button
+            (click)="
+              groupTitleExpanded[categoryTitle + group.title] =
+                !groupTitleExpanded[categoryTitle + group.title]
+            "
+            fill="clear"
+            color="medium"
           >
-            <div class="ion-text-wrap">
-              {{ group.title }}
-            </div>
-          </ion-checkbox>
-        </ion-item>
-      </ion-col>
-      <ion-col size="auto">
-        <ion-button
-          (click)="
-            groupTitleExpanded[categoryTitle + group.title] =
-              !groupTitleExpanded[categoryTitle + group.title]
-          "
-          fill="clear"
-          color="medium"
-        >
-          <ion-icon
-            *ngIf="groupTitleExpanded[categoryTitle + group.title]"
-            name="caret-down"
-          ></ion-icon>
-          <ion-icon
-            *ngIf="!groupTitleExpanded[categoryTitle + group.title]"
-            name="caret-up"
-          ></ion-icon>
-        </ion-button>
-      </ion-col>
-    </ion-row>
-    <ion-row
-      *ngIf="groupTitleExpanded[categoryTitle + group.title]"
-      class="indented-item"
-    >
-      <ion-col size="12">
-        <shopping-list-item
-          *ngFor="let item of group.items"
-          [id]="group.items[0].id"
-          [title]="item.title"
-          [completed]="item.completed"
-          [recipeTitle]="showRecipeTitle && item.recipe?.title"
-          [createdAt]="showAddedOn && item.createdAt"
-          [ownerName]="showAddedBy && item.owner?.name"
-          (completeToggle)="completeToggle.emit([item])"
-          (recategorize)="recategorize.emit([[item], $event])"
-        ></shopping-list-item>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
-</div>
+            @if (groupTitleExpanded[categoryTitle + group.title]) {
+              <ion-icon name="caret-down"></ion-icon>
+            }
+            @if (!groupTitleExpanded[categoryTitle + group.title]) {
+              <ion-icon name="caret-up"></ion-icon>
+            }
+          </ion-button>
+        </ion-col>
+      </ion-row>
+      @if (groupTitleExpanded[categoryTitle + group.title]) {
+        <ion-row class="indented-item">
+          <ion-col size="12">
+            @for (item of group.items; track item) {
+              <shopping-list-item
+                [id]="group.items[0].id"
+                [title]="item.title"
+                [completed]="item.completed"
+                [recipeTitle]="showRecipeTitle && item.recipe?.title"
+                [createdAt]="showAddedOn && item.createdAt"
+                [ownerName]="showAddedBy && item.owner?.name"
+                (completeToggle)="completeToggle.emit([item])"
+                (recategorize)="recategorize.emit([[item], $event])"
+              ></shopping-list-item>
+            }
+          </ion-col>
+        </ion-row>
+      }
+    </ion-grid>
+  </div>
+}
