--- a/packages/frontend/src/app/pages/info-components/download-and-install/download-and-install.page.html
+++ b/packages/frontend/src/app/pages/info-components/download-and-install/download-and-install.page.html
@@ -12,19 +12,22 @@
   <p>{{ 'pages.downloadAndInstall.subtitle' | translate }}</p>
 
   <ion-list>
-    <ion-item button *ngIf="pwaPromptCapable()" (click)="showPWAPrompt()">
+    @if (pwaPromptCapable()) {
+    <ion-item button (click)="showPWAPrompt()">
       <ion-icon name="cloud-download" slot="start"></ion-icon>
       <ion-label
         >{{ 'pages.downloadAndInstall.thisDevice' | translate }}</ion-label
       >
     </ion-item>
+    }
     <ion-item button (click)="toggleAndroid()" detail="true">
       <ion-icon name="phone-portrait" slot="start"></ion-icon>
       <ion-label
         >{{ 'pages.downloadAndInstall.android.title' | translate }}</ion-label
       >
     </ion-item>
-    <ion-item *ngIf="showAndroid">
+    @if (showAndroid) {
+    <ion-item>
       <p class="instruction">
         {{ 'pages.downloadAndInstall.android.instructionHeader' | translate
         }}<br />
@@ -35,13 +38,15 @@
         {{ 'pages.downloadAndInstall.done' | translate }}
       </p>
     </ion-item>
+    }
     <ion-item button (click)="toggleIOS()" detail="true">
       <ion-icon name="phone-portrait" slot="start"></ion-icon>
       <ion-label
         >{{ 'pages.downloadAndInstall.ios.title' | translate }}</ion-label
       >
     </ion-item>
-    <ion-item *ngIf="showIOS">
+    @if (showIOS) {
+    <ion-item>
       <p class="instruction">
         {{ 'pages.downloadAndInstall.ios.instructionHeader' | translate }}<br />
         <b>1.</b> {{ 'pages.downloadAndInstall.ios.step.1' | translate }}<br />
@@ -51,13 +56,15 @@
         {{ 'pages.downloadAndInstall.done' | translate }}
       </p>
     </ion-item>
+    }
     <ion-item button (click)="toggleDesktop()" detail="true">
       <ion-icon name="laptop" slot="start"></ion-icon>
       <ion-label
         >{{ 'pages.downloadAndInstall.desktop.title' | translate }}</ion-label
       >
     </ion-item>
-    <ion-item *ngIf="showDesktop">
+    @if (showDesktop) {
+    <ion-item>
       <p class="instruction">
         {{ 'pages.downloadAndInstall.desktop.instructionHeader' | translate
         }}<br />
@@ -68,6 +75,7 @@
         {{ 'pages.downloadAndInstall.done' | translate }}
       </p>
     </ion-item>
+    }
   </ion-list>
 
   <br />
