--- a/packages/frontend/src/app/pages/labels-pages/labels/labels.page.html
+++ b/packages/frontend/src/app/pages/labels-pages/labels/labels.page.html
@@ -1,28 +1,30 @@
 <ion-header>
   <ion-toolbar color="nav">
     <ion-buttons slot="start">
-      <ion-menu-button *ngIf="!selectionMode"></ion-menu-button>
-
-      <ion-button *ngIf="selectionMode" (click)="clearSelectedLabels()">
+      @if (!selectionMode) {
+      <ion-menu-button></ion-menu-button>
+      } @if (selectionMode) {
+      <ion-button (click)="clearSelectedLabels()">
         <ion-icon slot="icon-only" name="close"></ion-icon>
       </ion-button>
+      }
     </ion-buttons>
 
-    <ion-title *ngIf="selectionMode">
+    @if (selectionMode) {
+    <ion-title>
       {{ 'pages.labels.selectionModeTitle' |
       translate:{count:selectedLabelIds.length} }}
     </ion-title>
-    <ion-title *ngIf="!selectionMode">
-      {{ 'pages.labels.title' | translate }}
-    </ion-title>
+    } @if (!selectionMode) {
+    <ion-title> {{ 'pages.labels.title' | translate }} </ion-title>
+    }
 
     <ion-buttons slot="end">
-      <ion-button
-        *ngIf="selectionMode && selectedLabelIds.length > 0"
-        (click)="deleteSelectedLabels()"
-      >
+      @if (selectionMode && selectedLabelIds.length > 0) {
+      <ion-button (click)="deleteSelectedLabels()">
         <ion-icon slot="icon-only" name="trash"></ion-icon>
       </ion-button>
+      }
 
       <ion-button (click)="presentPopover($event)">
         <ion-icon slot="icon-only" name="options"></ion-icon>
@@ -36,22 +38,22 @@
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
 
-  <ion-list *ngIf="!loading">
+  @if (!loading) {
+  <ion-list>
     <ion-item>
       <ion-label>
         <h1>
           {{ 'pages.labels.label.sectionTitle' | translate:{count:labels.length}
           }}
         </h1>
-
         <p class="ion-text-wrap">
           {{ 'pages.labels.label.sectionDescription' |
           translate:{count:labels.length} }}
         </p>
       </ion-label>
     </ion-item>
-
-    <null-state *ngIf="!labels.length">
+    @if (!labels.length) {
+    <null-state>
       <ion-icon
         name="pricetag"
         class="big-icon"
@@ -64,9 +66,9 @@
         </p>
       </ion-label>
     </null-state>
+    } @for (label of labels; track labelTrackBy($index, label)) {
     <ion-item
       (click)="selectionMode ? selectLabel(label) : manageLabel(label)"
-      *ngFor="let label of labels; trackBy: labelTrackBy"
       button
       class="ion-margin-start"
     >
@@ -75,18 +77,20 @@
         {{label.title}}
         <p>
           {{ 'pages.labels.label.recipeCount' |
-          translate:{count:label._count.recipeLabels} }}
-          <span *ngIf="label.labelGroup">
+          translate:{count:label._count.recipeLabels} }} @if (label.labelGroup)
+          {
+          <span>
             {{ 'pages.labels.label.group' |
             translate:{title:label.labelGroup.title} }}
           </span>
-          <span *ngIf="!label.labelGroup">
-            {{ 'pages.labels.label.noGroup' | translate }}
-          </span>
-          <span *ngIf="preferences[preferenceKeys.ShowCreatedAt]">
+          } @if (!label.labelGroup) {
+          <span> {{ 'pages.labels.label.noGroup' | translate }} </span>
+          } @if (preferences[preferenceKeys.ShowCreatedAt]) {
+          <span>
             {{ 'pages.labels.label.createdAt' |
             translate:{dateString:formatDate(label.createdAt)} }}
           </span>
+          }
         </p>
       </ion-label>
       <ion-button
@@ -101,13 +105,16 @@
       >
         <ion-icon name="folder-open" slot="icon-only"></ion-icon>
       </ion-button>
-      <ion-badge *ngIf="selectedLabelIds.indexOf(label.id) > -1" slot="end">
+      @if (selectedLabelIds.indexOf(label.id) > -1) {
+      <ion-badge slot="end">
         {{ 'pages.labels.label.selected' | translate }}
       </ion-badge>
+      }
     </ion-item>
+    }
   </ion-list>
-
-  <ion-list *ngIf="!loading">
+  } @if (!loading) {
+  <ion-list>
     <ion-item>
       <ion-label>
         <h1>{{ 'pages.labels.group.sectionTitle' | translate }}</h1>
@@ -117,7 +124,8 @@
         </p>
       </ion-label>
     </ion-item>
-    <null-state *ngIf="!labelGroups.length">
+    @if (!labelGroups.length) {
+    <null-state>
       <ion-icon
         name="pricetags"
         class="big-icon"
@@ -130,9 +138,10 @@
         </p>
       </ion-label>
     </null-state>
+    } @for (labelGroup of labelGroups; track labelGroupTrackBy($index,
+    labelGroup)) {
     <ion-item
       (click)="manageLabelGroup(labelGroup)"
-      *ngFor="let labelGroup of labelGroups; trackBy: labelGroupTrackBy"
       button
       class="ion-margin-start"
     >
@@ -141,11 +150,13 @@
         {{labelGroup.title}}
         <p>
           {{ 'pages.labels.group.labelCount' |
-          translate:{count:labelGroup.labels.length} }}
-          <span *ngIf="preferences[preferenceKeys.ShowCreatedAt]">
+          translate:{count:labelGroup.labels.length} }} @if
+          (preferences[preferenceKeys.ShowCreatedAt]) {
+          <span>
             {{ 'pages.labels.group.createdAt' |
             translate:{dateString:formatDate(labelGroup.createdAt)} }}
           </span>
+          }
         </p>
       </ion-label>
       <ion-button
@@ -155,7 +166,9 @@
         <ion-icon name="pencil" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-item>
+    }
   </ion-list>
+  }
 
   <br />
   <br />
