--- a/packages/frontend/src/app/pages/meal-plan-components/new-meal-plan-modal/new-meal-plan-modal.page.html
+++ b/packages/frontend/src/app/pages/meal-plan-components/new-meal-plan-modal/new-meal-plan-modal.page.html
@@ -36,11 +36,12 @@
 <ion-footer class="ion-padding">
   <ion-button expand="block" (click)="save()" [disabled]="!mealPlanTitle">
     <ion-icon name="list" slot="start"></ion-icon>
-    <ion-label *ngIf="selectedCollaboratorIds.length > 0">
+    @if (selectedCollaboratorIds.length > 0) {
+    <ion-label>
       {{ 'pages.newMealPlanModal.createAndShare' | translate }}
     </ion-label>
-    <ion-label *ngIf="selectedCollaboratorIds.length === 0">
-      {{ 'pages.newMealPlanModal.create' | translate }}
-    </ion-label>
+    } @if (selectedCollaboratorIds.length === 0) {
+    <ion-label> {{ 'pages.newMealPlanModal.create' | translate }} </ion-label>
+    }
   </ion-button>
 </ion-footer>
