--- a/packages/frontend/src/app/pages/meal-plan-components/update-meal-plan-modal/update-meal-plan-modal.page.html
+++ b/packages/frontend/src/app/pages/meal-plan-components/update-meal-plan-modal/update-meal-plan-modal.page.html
@@ -10,7 +10,8 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding" *ngIf="loaded">
+@if (loaded) {
+<ion-content class="ion-padding">
   <ion-item>
     <ion-input
       label="{{ 'pages.updateMealPlanModal.input.title' | translate }}"
@@ -23,23 +24,25 @@
       spellcheck="true"
     ></ion-input>
   </ion-item>
-
   <br /><br />
-
   <select-collaborators
     [selectedCollaboratorIds]="selectedCollaboratorIds"
     (selectedCollaboratorIdsChanged)="selectedCollaboratorIds = $event"
   ></select-collaborators>
 </ion-content>
+}
 
 <ion-footer class="ion-padding">
   <ion-button expand="block" (click)="save()" [disabled]="!mealPlanTitle">
     <ion-icon name="list" slot="start"></ion-icon>
-    <ion-label *ngIf="selectedCollaboratorIds.length > 0">
+    @if (selectedCollaboratorIds.length > 0) {
+    <ion-label>
       {{ 'pages.updateMealPlanModal.updateAndShare' | translate }}
     </ion-label>
-    <ion-label *ngIf="selectedCollaboratorIds.length === 0">
+    } @if (selectedCollaboratorIds.length === 0) {
+    <ion-label>
       {{ 'pages.updateMealPlanModal.update' | translate }}
     </ion-label>
+    }
   </ion-button>
 </ion-footer>
