--- a/packages/frontend/src/app/pages/messaging-components/assistant/assistant.page.html
+++ b/packages/frontend/src/app/pages/messaging-components/assistant/assistant.page.html
@@ -41,42 +41,40 @@
         </p>
       </ion-label>
     </null-state>
+    @for (message of messages; track trackByFn(i, message); let i = $index) {
     <div
       class="message"
       [ngClass]="{'me': message.role === 'user', 'blue': message.role !== 'user' }"
-      *ngFor="let message of messages; let i = index; trackBy: trackByFn"
       [id]="'message-' + message.id"
     >
-      <div class="time-divider" *ngIf="message.deservesDateDiff">
-        {{ message.dateDiff }}
-      </div>
+      @if (message.deservesDateDiff) {
+      <div class="time-divider">{{ message.dateDiff }}</div>
+      } @if (!message.recipeId) {
       <div
         class="chat"
-        *ngIf="!message.recipeId"
         (click)="setSelectedChat(i)"
         [innerHTML]="message.content"
       ></div>
-      <div class="recipe" *ngIf="message.recipe && message.role !== 'user'">
+      } @if (message.recipe && message.role !== 'user') {
+      <div class="recipe">
         <!-- RECIPIENT -->
+        @if (message.recipe) {
         <ion-item
-          *ngIf="message.recipe"
           (click)="openRecipe(message.recipe)"
           lines="none"
           button="true"
         >
-          <ion-avatar
-            *ngIf="message.recipe.recipeImages && message.recipe.recipeImages.length > 0"
-            slot="start"
-          >
+          @if (message.recipe.recipeImages && message.recipe.recipeImages.length
+          > 0) {
+          <ion-avatar slot="start">
             <img src="{{ message.recipe.recipeImages[0].image.location }}" />
           </ion-avatar>
-          <ion-avatar
-            class="assistant-recipe-image"
-            *ngIf="!message.recipe.recipeImages || message.recipe.recipeImages.length === 0"
-            slot="start"
-          >
+          } @if (!message.recipe.recipeImages ||
+          message.recipe.recipeImages.length === 0) {
+          <ion-avatar class="assistant-recipe-image" slot="start">
             <img src="assets/imgs/logo_green.png" />
           </ion-avatar>
+          }
           <ion-label>
             <h2 class="ion-text-wrap">{{ message.recipe.title }}</h2>
             <p class="description">
@@ -84,11 +82,8 @@
             </p>
           </ion-label>
         </ion-item>
-        <ion-item
-          *ngIf="!message.recipe"
-          (click)="setSelectedChat(i)"
-          lines="none"
-        >
+        } @if (!message.recipe) {
+        <ion-item (click)="setSelectedChat(i)" lines="none">
           <ion-label>
             <h2 class="ion-text-wrap">
               {{ 'pages.messageThread.recipeDeleted' | translate }}
@@ -98,22 +93,23 @@
             </p>
           </ion-label>
         </ion-item>
+        }
       </div>
-
-      <div class="recipe" *ngIf="message.recipe && message.role === 'user'">
+      } @if (message.recipe && message.role === 'user') {
+      <div class="recipe">
         <!-- SENDER -->
+        @if (message.recipe) {
         <ion-item
-          *ngIf="message.recipe"
           (click)="openRecipe(message.recipe)"
           lines="none"
           button="true"
         >
-          <ion-avatar
-            *ngIf="message.recipe.recipeImages && message.recipe.recipeImages.length > 0"
-            slot="start"
-          >
+          @if (message.recipe.recipeImages && message.recipe.recipeImages.length
+          > 0) {
+          <ion-avatar slot="start">
             <img src="{{ message.recipe.recipeImages[0].image.location }}" />
           </ion-avatar>
+          }
           <ion-label>
             <h2 class="ion-text-wrap">{{ message.recipe.title }}</h2>
             <p class="description">
@@ -121,11 +117,8 @@
             </p>
           </ion-label>
         </ion-item>
-        <ion-item
-          *ngIf="!message.recipe"
-          (click)="setSelectedChat(i)"
-          lines="none"
-        >
+        } @if (!message.recipe) {
+        <ion-item (click)="setSelectedChat(i)" lines="none">
           <ion-label>
             <h2 class="ion-text-wrap">
               {{ 'pages.messageThread.recipeDeleted' | translate }}
@@ -135,12 +128,13 @@
             </p>
           </ion-label>
         </ion-item>
+        }
       </div>
-
-      <div class="chatDetails" *ngIf="selectedChatIdx === i">
-        {{ message.formattedDate }}
-      </div>
+      } @if (selectedChatIdx === i) {
+      <div class="chatDetails">{{ message.formattedDate }}</div>
+      }
     </div>
+    }
   </div>
 </ion-content>
 
@@ -172,8 +166,11 @@
         slot="end"
         class="submit"
       >
-        <ion-icon *ngIf="!processing" name="send" slot="icon-only"></ion-icon>
-        <ion-spinner *ngIf="processing" name="crescent"></ion-spinner>
+        @if (!processing) {
+        <ion-icon name="send" slot="icon-only"></ion-icon>
+        } @if (processing) {
+        <ion-spinner name="crescent"></ion-spinner>
+        }
       </ion-button>
     </ion-item>
   </form>
