--- a/packages/frontend/src/app/pages/settings-components/import-json-ld/import-json-ld.page.html
+++ b/packages/frontend/src/app/pages/settings-components/import-json-ld/import-json-ld.page.html
@@ -32,24 +32,28 @@
 
         <div class="ion-padding">
           <ion-button fill="outline" (click)="filePicker()">
-            <span *ngIf="file">
+            @if (file) {
+            <span>
               {{ 'pages.import.filePicker.file' | translate:{fileName:file.name}
               }}
             </span>
-            <span *ngIf="!file">
+            } @if (!file) {
+            <span>
               {{ 'pages.import.filePicker.noFile' |
               translate:{acceptableFiletypes:'.json'} }}
             </span>
+            }
           </ion-button>
 
-          <div *ngIf="showFileTypeWarning()">
+          @if (showFileTypeWarning()) {
+          <div>
             <p>
               {{ 'pages.import.fileTypeWarning' |
               translate:{acceptableFiletypes:'.json'} }}
             </p>
           </div>
-
-          <div *ngIf="isFileTooLarge()">
+          } @if (isFileTooLarge()) {
+          <div>
             <p>
               <b>{{ 'pages.import.fileTooLarge' | translate }}</b><br />
               <a href="mailto:julian@recipesage.com?subject=RecipeSage Support">
@@ -57,6 +61,7 @@
               </a>
             </p>
           </div>
+          }
         </div>
       </ion-label>
     </ion-item>
@@ -69,40 +74,36 @@
         {{ 'pages.import.step' | translate:{ number: 2 } }}
 
         <div class="ion-padding">
-          <ion-button
-            slot="start"
-            *ngIf="!showFileTypeWarning()"
-            (click)="submit()"
-          >
+          @if (!showFileTypeWarning()) {
+          <ion-button slot="start" (click)="submit()">
             {{ 'pages.import.upload' | translate }}
           </ion-button>
-          <ion-button
-            slot="start"
-            *ngIf="showFileTypeWarning()"
-            (click)="submit()"
-          >
+          } @if (showFileTypeWarning()) {
+          <ion-button slot="start" (click)="submit()">
             {{ 'pages.import.upload.ignoreWarning' | translate }}
           </ion-button>
+          }
         </div>
       </ion-label>
     </ion-item>
 
     <ion-item lines="none" [disabled]="progress === undefined">
       <ion-label slot="start">
-        {{ 'pages.import.step' | translate:{ number: 3 } }}
-
-        <div class="ion-padding" *ngIf="progress === undefined">
+        {{ 'pages.import.step' | translate:{ number: 3 } }} @if (progress ===
+        undefined) {
+        <div class="ion-padding">
           {{ 'pages.import.uploading.hint' | translate }}<br />
           <ion-progress-bar type="determinate" [value]="0"></ion-progress-bar>
         </div>
-
-        <div class="ion-padding" *ngIf="progress !== undefined">
+        } @if (progress !== undefined) {
+        <div class="ion-padding">
           {{ 'pages.import.uploading' | translate }}<br />
           <ion-progress-bar
             type="determinate"
             [value]="progress"
           ></ion-progress-bar>
         </div>
+        }
       </ion-label>
     </ion-item>
 
