--- a/packages/frontend/src/app/pages/settings-components/import-livingcookbook/import-livingcookbook.page.html
+++ b/packages/frontend/src/app/pages/settings-components/import-livingcookbook/import-livingcookbook.page.html
@@ -32,24 +32,28 @@
 
         <div class="ion-padding">
           <ion-button fill="outline" (click)="filePicker()">
-            <span *ngIf="file">
+            @if (file) {
+            <span>
               {{ 'pages.import.filePicker.file' | translate:{fileName:file.name}
               }}
             </span>
-            <span *ngIf="!file">
+            } @if (!file) {
+            <span>
               {{ 'pages.import.filePicker.noFile' |
               translate:{acceptableFiletypes:'.lcb, .fdx, .fdxz'} }}
             </span>
+            }
           </ion-button>
 
-          <div *ngIf="showFileTypeWarning()">
+          @if (showFileTypeWarning()) {
+          <div>
             <p>
               {{ 'pages.import.fileTypeWarning' |
               translate:{acceptableFiletypes:'.lcb, .fdx, .fdxz'} }}
             </p>
           </div>
-
-          <div *ngIf="isFileTooLarge()">
+          } @if (isFileTooLarge()) {
+          <div>
             <p>
               <b>{{ 'pages.import.fileTooLarge' | translate }}</b><br />
               <a href="mailto:julian@recipesage.com?subject=RecipeSage Support">
@@ -57,6 +61,7 @@
               </a>
             </p>
           </div>
+          }
         </div>
       </ion-label>
     </ion-item>
@@ -77,8 +82,8 @@
           >
             {{ 'pages.importLivingCookbook.excludeImages' | translate }}
           </ion-checkbox>
+          @if (isLCB()) {
           <ion-checkbox
-            *ngIf="isLCB()"
             labelPlacement="end"
             justify="start"
             [checked]="options.includeStockRecipes"
@@ -86,8 +91,8 @@
           >
             {{ 'pages.importLivingCookbook.includeStock' | translate }}
           </ion-checkbox>
+          } @if (isLCB()) {
           <ion-checkbox
-            *ngIf="isLCB()"
             labelPlacement="end"
             justify="start"
             [checked]="options.includeTechniques"
@@ -95,41 +100,36 @@
           >
             {{ 'pages.importLivingCookbook.includeTechniques' | translate }}
           </ion-checkbox>
-
-          <ion-button
-            slot="start"
-            *ngIf="!showFileTypeWarning()"
-            (click)="submit()"
-          >
+          } @if (!showFileTypeWarning()) {
+          <ion-button slot="start" (click)="submit()">
             {{ 'pages.import.upload' | translate }}
           </ion-button>
-          <ion-button
-            slot="start"
-            *ngIf="showFileTypeWarning()"
-            (click)="submit()"
-          >
+          } @if (showFileTypeWarning()) {
+          <ion-button slot="start" (click)="submit()">
             {{ 'pages.import.upload.ignoreWarning' | translate }}
           </ion-button>
+          }
         </div>
       </ion-label>
     </ion-item>
 
     <ion-item lines="none" [disabled]="progress === undefined">
       <ion-label slot="start">
-        {{ 'pages.import.step' | translate:{ number: 3 } }}
-
-        <div class="ion-padding" *ngIf="progress === undefined">
+        {{ 'pages.import.step' | translate:{ number: 3 } }} @if (progress ===
+        undefined) {
+        <div class="ion-padding">
           {{ 'pages.import.uploading.hint' | translate }}<br />
           <ion-progress-bar type="determinate" [value]="0"></ion-progress-bar>
         </div>
-
-        <div class="ion-padding" *ngIf="progress !== undefined">
+        } @if (progress !== undefined) {
+        <div class="ion-padding">
           {{ 'pages.import.uploading' | translate }}<br />
           <ion-progress-bar
             type="determinate"
             [value]="progress"
           ></ion-progress-bar>
         </div>
+        }
       </ion-label>
     </ion-item>
 
