--- a/packages/frontend/src/app/pages/settings-components/settings/settings.page.html
+++ b/packages/frontend/src/app/pages/settings-components/settings/settings.page.html
@@ -48,7 +48,8 @@
       </ion-label>
     </ion-item>
 
-    <ion-item lines="inset" *ngIf="showSplitPaneOption">
+    @if (showSplitPaneOption) {
+    <ion-item lines="inset">
       <ion-icon name="tablet-landscape" slot="start"></ion-icon>
       <ion-toggle
         [(ngModel)]="preferences[preferenceKeys.EnableSplitPane]"
@@ -59,6 +60,7 @@
         </div>
       </ion-toggle>
     </ion-item>
+    }
     <ion-item lines="inset">
       <ion-icon name="brush" slot="start"></ion-icon>
       <ion-select
@@ -99,12 +101,11 @@
         <ion-select-option value="navigator">
           {{ 'pages.settings.language.default' | translate }}
         </ion-select-option>
-        <ion-select-option
-          *ngFor="let languageOption of languageOptions"
-          [value]="languageOption[0]"
-        >
+        @for (languageOption of languageOptions; track languageOption) {
+        <ion-select-option [value]="languageOption[0]">
           {{ languageOption[1] }}
         </ion-select-option>
+        }
       </ion-select>
     </ion-item>
     <ion-item
