--- a/packages/frontend/src/app/pages/shopping-list-components/new-shopping-list-modal/new-shopping-list-modal.page.html
+++ b/packages/frontend/src/app/pages/shopping-list-components/new-shopping-list-modal/new-shopping-list-modal.page.html
@@ -37,12 +37,11 @@
   <ion-button expand="block" (click)="save()" [disabled]="!listTitle">
     <ion-icon name="list" slot="start"></ion-icon>
     <ion-label>
-      <span *ngIf="selectedCollaboratorIds.length === 0">
-        {{ 'pages.newShoppingList.create' | translate }}
-      </span>
-      <span *ngIf="selectedCollaboratorIds.length > 0">
-        {{ 'pages.newShoppingList.createAndShare' | translate }}
-      </span>
+      @if (selectedCollaboratorIds.length === 0) {
+      <span> {{ 'pages.newShoppingList.create' | translate }} </span>
+      } @if (selectedCollaboratorIds.length > 0) {
+      <span> {{ 'pages.newShoppingList.createAndShare' | translate }} </span>
+      }
     </ion-label>
   </ion-button>
 </ion-footer>
