--- a/packages/frontend/src/app/pages/shopping-list-components/shopping-list/shopping-list.page.html
+++ b/packages/frontend/src/app/pages/shopping-list-components/shopping-list/shopping-list.page.html
@@ -22,33 +22,26 @@
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
   <ion-list lines="none">
-    <div
-      *ngIf="preferences[preferenceKeys.GroupCategories] && preferences[preferenceKeys.GroupSimilar]"
-    >
-      <div
-        *ngFor="let categoryTitle of categoryTitles"
-        class="category-container"
-      >
+    @if (preferences[preferenceKeys.GroupCategories] &&
+    preferences[preferenceKeys.GroupSimilar]) {
+    <div>
+      @for (categoryTitle of categoryTitles; track categoryTitle) {
+      <div class="category-container">
         <ion-list-header
           (click)="categoryTitleCollapsed[categoryTitle] = !categoryTitleCollapsed[categoryTitle]"
         >
           <ion-title class="ion-no-padding">
-            {{ categoryTitle }}
-            <ion-icon
-              *ngIf="!categoryTitleCollapsed[categoryTitle]"
-              name="caret-down"
-            ></ion-icon>
-            <ion-icon
-              *ngIf="categoryTitleCollapsed[categoryTitle]"
-              name="caret-up"
-            ></ion-icon>
+            {{ categoryTitle }} @if (!categoryTitleCollapsed[categoryTitle]) {
+            <ion-icon name="caret-down"></ion-icon>
+            } @if (categoryTitleCollapsed[categoryTitle]) {
+            <ion-icon name="caret-up"></ion-icon>
+            }
           </ion-title>
         </ion-list-header>
-        <div *ngIf="!categoryTitleCollapsed[categoryTitle]">
-          <div
-            *ngFor="let group of groupsByCategoryTitle[categoryTitle]"
-            class="shopping-list-item"
-          >
+        @if (!categoryTitleCollapsed[categoryTitle]) {
+        <div>
+          @for (group of groupsByCategoryTitle[categoryTitle]; track group) {
+          <div class="shopping-list-item">
             <shopping-list-group
               [group]="group"
               [categoryTitle]="categoryTitle"
@@ -60,13 +53,17 @@
               (recategorize)="recategorizeItems($event[0], $event[1])"
             ></shopping-list-group>
           </div>
+          }
         </div>
+        }
       </div>
+      }
     </div>
-    <div
-      *ngIf="!preferences[preferenceKeys.GroupCategories] && preferences[preferenceKeys.GroupSimilar]"
-    >
-      <div *ngFor="let groupTitle of groupTitles" class="shopping-list-item">
+    } @if (!preferences[preferenceKeys.GroupCategories] &&
+    preferences[preferenceKeys.GroupSimilar]) {
+    <div>
+      @for (groupTitle of groupTitles; track groupTitle) {
+      <div class="shopping-list-item">
         <shopping-list-group
           [group]="{ title: groupTitle, items: itemsByGroupTitle[groupTitle] }"
           [groupTitleExpanded]="groupTitleExpanded"
@@ -77,34 +74,28 @@
           (recategorize)="recategorizeItems($event[0], $event[1])"
         ></shopping-list-group>
       </div>
+      }
     </div>
-    <div
-      *ngIf="preferences[preferenceKeys.GroupCategories] && !preferences[preferenceKeys.GroupSimilar]"
-    >
-      <div
-        *ngFor="let categoryTitle of categoryTitles"
-        class="category-container"
-      >
+    } @if (preferences[preferenceKeys.GroupCategories] &&
+    !preferences[preferenceKeys.GroupSimilar]) {
+    <div>
+      @for (categoryTitle of categoryTitles; track categoryTitle) {
+      <div class="category-container">
         <ion-list-header
           (click)="categoryTitleCollapsed[categoryTitle] = !categoryTitleCollapsed[categoryTitle]"
         >
           <ion-title class="ion-no-padding">
-            {{ categoryTitle }}
-            <ion-icon
-              *ngIf="!categoryTitleCollapsed[categoryTitle]"
-              name="caret-down"
-            ></ion-icon>
-            <ion-icon
-              *ngIf="categoryTitleCollapsed[categoryTitle]"
-              name="caret-up"
-            ></ion-icon>
+            {{ categoryTitle }} @if (!categoryTitleCollapsed[categoryTitle]) {
+            <ion-icon name="caret-down"></ion-icon>
+            } @if (categoryTitleCollapsed[categoryTitle]) {
+            <ion-icon name="caret-up"></ion-icon>
+            }
           </ion-title>
         </ion-list-header>
-        <div *ngIf="!categoryTitleCollapsed[categoryTitle]">
-          <div
-            *ngFor="let item of itemsByCategoryTitle[categoryTitle]"
-            class="shopping-list-item"
-          >
+        @if (!categoryTitleCollapsed[categoryTitle]) {
+        <div>
+          @for (item of itemsByCategoryTitle[categoryTitle]; track item) {
+          <div class="shopping-list-item">
             <shopping-list-item
               [id]="item.id"
               [title]="item.title"
@@ -116,13 +107,17 @@
               (recategorize)="recategorizeItems([item], $event)"
             ></shopping-list-item>
           </div>
+          }
         </div>
+        }
       </div>
+      }
     </div>
-    <div
-      *ngIf="!preferences[preferenceKeys.GroupCategories] && !preferences[preferenceKeys.GroupSimilar]"
-    >
-      <div *ngFor="let item of items" class="shopping-list-item">
+    } @if (!preferences[preferenceKeys.GroupCategories] &&
+    !preferences[preferenceKeys.GroupSimilar]) {
+    <div>
+      @for (item of items; track item) {
+      <div class="shopping-list-item">
         <shopping-list-item
           [id]="item.id"
           [title]="item.title"
@@ -134,8 +129,10 @@
           (recategorize)="recategorizeItems([item], $event)"
         ></shopping-list-item>
       </div>
+      }
     </div>
-    <null-state *ngIf="shoppingListItems?.length === 0">
+    } @if (shoppingListItems?.length === 0) {
+    <null-state>
       <ion-icon name="cart" class="big-icon" virtualSlot="header"></ion-icon>
       <ion-label virtualSlot="body">
         <p>
@@ -151,17 +148,20 @@
         </p>
       </ion-label>
     </null-state>
+    }
   </ion-list>
 
   <br />
 
-  <ion-list *ngIf="recipeIds.length > 0">
+  @if (recipeIds.length > 0) {
+  <ion-list>
     <ion-item>
       <ion-label class="ion-text-wrap">
         {{ 'pages.shoppingList.recipes' | translate }}
       </ion-label>
     </ion-item>
-    <ion-item *ngFor="let recipeId of recipeIds" button>
+    @for (recipeId of recipeIds; track recipeId) {
+    <ion-item button>
       <ion-icon
         class="delete-recipe"
         name="trash"
@@ -172,11 +172,14 @@
         {{ itemsByRecipeId[recipeId][0].recipe!.title }}
       </ion-label>
     </ion-item>
+    }
   </ion-list>
+  }
 
   <br />
 
-  <ion-list *ngIf="completedItems.length > 0">
+  @if (completedItems.length > 0) {
+  <ion-list>
     <ion-item>
       <ion-label> {{ 'pages.shoppingList.completed' | translate }} </ion-label>
       <ion-button
@@ -198,8 +201,8 @@
         <ion-icon name="trash" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-item>
+    @for (item of completedItems; track item) {
     <shopping-list-item
-      *ngFor="let item of completedItems"
       [id]="item.id"
       [title]="item.title"
       [completed]="item.completed"
@@ -212,7 +215,9 @@
       (recategorize)="recategorizeItems([item], $event)"
       (deleteClick)="removeItems([item])"
     ></shopping-list-item>
+    }
   </ion-list>
+  }
 
   <br />
   <br />
