--- a/packages/frontend/src/app/pages/social/profile/profile.page.html
+++ b/packages/frontend/src/app/pages/social/profile/profile.page.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-toolbar color="nav">
     <ion-buttons slot="start">
-      <ion-menu-button *ngIf="!isLoggedIn()"></ion-menu-button>
-      <ion-back-button
-        *ngIf="isLoggedIn()"
-        [defaultHref]="defaultBackHref"
-      ></ion-back-button>
+      @if (!isLoggedIn()) {
+      <ion-menu-button></ion-menu-button>
+      } @if (isLoggedIn()) {
+      <ion-back-button [defaultHref]="defaultBackHref"></ion-back-button>
+      }
     </ion-buttons>
 
     <ion-title>
@@ -19,29 +19,27 @@
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
 
-  <div *ngIf="profile">
+  @if (profile) {
+  <div>
     <br />
-
-    <selfhost-warning-item *ngIf="isSelfHost"></selfhost-warning-item>
-
+    @if (isSelfHost) {
+    <selfhost-warning-item></selfhost-warning-item>
+    }
     <br />
-
     <div class="profile-details-container">
-      <div
-        *ngIf="!profile.profileImages || profile.profileImages.length === 0"
-        class="no-image"
-      >
+      @if (!profile.profileImages || profile.profileImages.length === 0) {
+      <div class="no-image">
         <img src="assets/imgs/logo_green.png" />
       </div>
+      } @if (profile.profileImages && profile.profileImages.length > 0) {
       <ion-thumbnail
         class="profile-image ion-margin-top"
-        *ngIf="profile.profileImages && profile.profileImages.length > 0"
         slot="start"
         (click)="openImageViewer()"
       >
         <img src="{{ profile.profileImages.at(0)?.location }}" />
       </ion-thumbnail>
-
+      }
       <div class="profile-details">
         <ion-item lines="none">
           <h3 class="username">{{ profile.name }}</h3>
@@ -53,55 +51,53 @@
           <ion-item lines="none" (click)="shareProfile()" button>
             <ion-icon name="share-social"></ion-icon>
           </ion-item>
-          <ion-item
-            lines="none"
-            (click)="sendMessage()"
-            *ngIf="isLoggedIn() && !profile?.isMe"
-            button
-          >
+          @if (isLoggedIn() && !profile.isMe) {
+          <ion-item lines="none" (click)="sendMessage()" button>
             <ion-icon name="mail"></ion-icon>
           </ion-item>
+          }
         </div>
       </div>
     </div>
-
     <br />
-
     <ion-item lines="none">
       <ion-icon name="key" slot="start"></ion-icon>
       <ion-label class="ion-text-wrap">
         {{ 'pages.profile.pinned' | translate }}
       </ion-label>
     </ion-item>
-
-    <ion-list *ngIf="profile?.profileItems?.length">
-      <div *ngFor="let item of profile?.profileItems">
-        <ion-item
-          *ngIf="item.type === 'all-recipes'"
-          button
-          (click)="open(item)"
-        >
+    @if (profile.profileItems.length) {
+    <ion-list>
+      @for (item of profile.profileItems; track item) {
+      <div>
+        @if (item.type === 'all-recipes') {
+        <ion-item button (click)="open(item)">
           <ion-icon class="item-icon" name="folder" slot="start"></ion-icon>
           <ion-label class="ion-text-wrap">{{item.title}}</ion-label>
           <!-- <ion-badge slot="end">{{label.recipeCount}} Recipes</ion-badge> -->
         </ion-item>
-        <ion-item *ngIf="item.type === 'recipe'" button (click)="open(item)">
-          <ion-avatar slot="start" *ngIf="item?.recipe?.images?.length">
+        } @if (item.type === 'recipe') {
+        <ion-item button (click)="open(item)">
+          @if (item?.recipe?.images?.length) {
+          <ion-avatar slot="start">
             <img [src]="item.recipe.images?.at(0)?.location" />
           </ion-avatar>
+          }
           <ion-label class="ion-text-wrap">{{item.title}}</ion-label>
           <!-- <ion-badge slot="end">{{label.recipeCount}} Recipes</ion-badge> -->
         </ion-item>
-
-        <ion-item *ngIf="item.type === 'label'" button (click)="open(item)">
+        } @if (item.type === 'label') {
+        <ion-item button (click)="open(item)">
           <ion-icon class="item-icon" name="pricetag" slot="start"></ion-icon>
           <ion-label class="ion-text-wrap">{{item.title}}</ion-label>
           <!-- <ion-badge slot="end">{{label.recipeCount}} Recipes</ion-badge> -->
         </ion-item>
+        }
       </div>
+      }
     </ion-list>
-
-    <null-state *ngIf="!profile?.profileItems?.length">
+    } @if (!profile.profileItems.length) {
+    <null-state>
       <ion-icon
         name="bookmarks"
         class="big-icon"
@@ -114,60 +110,53 @@
         </p>
       </ion-label>
     </null-state>
+    }
   </div>
+  }
 </ion-content>
 
-<ion-footer *ngIf="profile && !profile?.isMe">
-  <ion-toolbar class="ion-padding-horizontal" *ngIf="isLoggedIn()">
-    <div class="action-button-container" *ngIf="myProfile?.enableProfile">
-      <ion-button
-        expand="block"
-        (click)="addFriend()"
-        *ngIf="!profile?.incomingFriendship && !profile?.outgoingFriendship"
-      >
+@if (profile && !profile.isMe) {
+<ion-footer>
+  @if (isLoggedIn()) {
+  <ion-toolbar class="ion-padding-horizontal">
+    @if (myProfile?.enableProfile) {
+    <div class="action-button-container">
+      @if (!profile.incomingFriendship && !profile.outgoingFriendship) {
+      <ion-button expand="block" (click)="addFriend()">
         {{ 'pages.profile.send' | translate }}
       </ion-button>
-      <ion-button
-        expand="block"
-        (click)="deleteFriend()"
-        *ngIf="!profile?.incomingFriendship && profile?.outgoingFriendship"
-        color="danger"
-      >
+      } @if (!profile.incomingFriendship && profile.outgoingFriendship) {
+      <ion-button expand="block" (click)="deleteFriend()" color="danger">
         {{ 'pages.profile.cancel' | translate }}
       </ion-button>
-      <ion-button
-        expand="block"
-        (click)="addFriend()"
-        *ngIf="profile?.incomingFriendship && !profile?.outgoingFriendship"
-      >
+      } @if (profile.incomingFriendship && !profile.outgoingFriendship) {
+      <ion-button expand="block" (click)="addFriend()">
         {{ 'pages.profile.accept' | translate }}
       </ion-button>
-      <ion-button
-        expand="block"
-        (click)="deleteFriend()"
-        *ngIf="profile?.incomingFriendship && !profile?.outgoingFriendship"
-        color="danger"
-      >
+      } @if (profile.incomingFriendship && !profile.outgoingFriendship) {
+      <ion-button expand="block" (click)="deleteFriend()" color="danger">
         {{ 'pages.profile.decline' | translate }}
       </ion-button>
-      <ion-button
-        expand="block"
-        (click)="deleteFriend()"
-        *ngIf="profile?.incomingFriendship && profile?.outgoingFriendship"
-        color="danger"
-      >
+      } @if (profile.incomingFriendship && profile.outgoingFriendship) {
+      <ion-button expand="block" (click)="deleteFriend()" color="danger">
         {{ 'pages.profile.unfriend' | translate }}
       </ion-button>
+      }
     </div>
-    <div class="action-button-container" *ngIf="!myProfile?.enableProfile">
+    } @if (!myProfile?.enableProfile) {
+    <div class="action-button-container">
       <ion-button expand="block" (click)="setupMyProfile()">
         {{ 'pages.profile.setup' | translate }}
       </ion-button>
     </div>
+    }
   </ion-toolbar>
-  <ion-toolbar class="ion-padding-horizontal" *ngIf="!isLoggedIn()">
+  } @if (!isLoggedIn()) {
+  <ion-toolbar class="ion-padding-horizontal">
     <ion-button expand="block" (click)="authAndAddFriend()">
       {{ 'pages.profile.login' | translate }}
     </ion-button>
   </ion-toolbar>
+  }
 </ion-footer>
+}
